# robotics

./: LICENSE  README.md  Robot_compilation.ino  robotDesign.fcstd
2DMatrix/: 2DMatrix_menu.php  admin_config.php  admin_menu.php  admin_readme.php  help.php  plugin.php  readme.txt
2DMatrix/includes/: config.php
2DMatrix/languages/: English.php
AIBot/: askWolfram.py  recordMe  sayText  soxSay  speech2Text  streamMusic  talk2Me
Avr/AVR-UART/: 1wire-delay.h  1wire.c  1wire.h  delay_x.h  lcd.h  test_uart.c  uart.h  uart_test.kontrollerlab
Avr/Drawer/: 1wire-delay.h  1wire.h  lcd.h
BikeTrackingProject/CellCall/: CellCall.pde
BikeTrackingProject/CellTest/: CellTest.pde
BikeTrackingProject/GPSCell/: GPSCell.pde
BikeTrackingProject/GPSTracker/: GPSTracker.ino
BikeTrackingProject/SMSControl/: smsControl.pde
BikeTrackingProject/SMSControl2/: SMSControl2.pde
BikeTrackingProject/SendSMS/: SendSMS.ino
BikeTrackingProject/WebInterface/Client/: gpstracker.php  location.html  locs.php  test.php
BikeTrackingProject/WebInterface/Server/: config.py  server.py
Drawer/: 1wire.c  DrawerSecurity.aps  DrawerSecurity.c  drawer.kontrollerlab  project.hex  project.map  project.out
FaceRecognition/: CMakeLists.txt  EHMM.cpp  EHMM.h  EHMMObj.cpp  EHMMObj.h  EHMMObjDatabase.cpp  EHMMObjDatabase.h  EHMMObjRecognition.cpp  EHMMObjRecognition.h  FaceRecognition.cpp  ImgObj.cpp  ImgObj.h  ImgObjDatabase.cpp  ImgObjDatabase.h  Obj.cpp  Obj.h  RecognizeEHMM.cpp  RecognizeEHMM.h  Utils.cpp  Utils.h
FaceRecognition/DATABASE/CvEhmmDB/: BlackCoder.db  Sergey.Molinov.ehmm  Tarek.Taha.ehmm  Vadim.Pisarevsky.ehmm  Valery.Cherepennikov.ehmm  Valery.Mosyagin.ehmm  Victor.Eruhimov.ehmm
FaceRecognition/DATABASE/CvImgDB/: OpenCvTeam.db  Sergey.Molinov.imobj  Tarek.Taha.imobj  Vadim.Pisarevsky.imobj  Valery.Cherepennikov.imobj  Valery.Mosyagin.imobj  Victor.Eruhimov.imobj
ROSCode/sketchbook/: updateCode.py
ROSCode/sketchbook/beep/src/: sketch.ino
ROSCode/sketchbook/pi/src/.build/: environment.pickle
ROSCode/sketchbook/robotSonarAvoid/src/: sketch.ino
ROSCode/sketchbook/robotica/: updateCode.py
ROSCode/sketchbook/robotica/src/: sketch.ino
ROSCode/sketchbook/servo/src/: sketch.ino
RobotController/MotorController/: MotorController.ino
RobotController/SonarAvoid/: SonarAvoid.ino
SSPP/: .cproject  .player  .project  makefile
SSPP/PathPlanner/include/: astar.h  llist.h  node.h
SSPP/PathPlanner/src/: astar.cpp  llist.cpp  node.cpp
SSPP/stage_test/: SearchSpace.txt
VideoSurveillance/: CMakeLists.txt
VideoSurveillance/src/: main.cpp
VideoSurveillance/webClient/: receiver.php  sender.php
darpa/: 070610_103525_localise3d0.log.part  CarModel.cpp  CarModel.h  CarScan  CarScan.kdevelop  CarScan.kdevelop.filelist  CarScan.kdevelop.pcs  CarScan.kdevses  Doxyfile  LaserBuffer.cpp  LaserBuffer.h  OccupancyGrid.cpp  OccupancyGrid.h  laser_scan  laser_scan.cc  laser_scan.h  makefile  test-0000.mpeg
